# Teaching_Video_Generation

./: .gitignore  README.md  pyproject.toml  requirements.txt
code2video/: .env.example  README.md  agent.py  api_config.json  external_assets.py  gpt_request.py  scope_refine.py  slide_bg.py
code2video/prompts/: base_class.py  stage3.py
runs/graded_intro/: evaluator_repeatability.md  human_vs_evaluator_scores.md
runs/matrix/: lesson_plan.json  review_r0.json
runs/vectors/: lesson_plan.json  review_r0.json
teachgen/: README.md  __init__.py  cli.py  concept_image.py  config.py  make_slide.py  mpcompat.py  pipeline.py  requirements.txt  schema.py
teachgen/audio/: __init__.py  narrator.py
teachgen/compositor/: __init__.py  compositor.py
teachgen/eval/: __init__.py  aggregate.py  extractors.py  graders.py  inference.py  models.py  prompts.py  run_evaluation.py  storage.py  text_llm.py  video.py  video_llm.py
teachgen/eval/docs/: json.md  rubric.md
teachgen/feedback/: __init__.py  _frames.py  eval_runner.py  evaluation_adapter.py  evaluator_reviewer.py  outer_reviewer.py  plan_refiner.py  reviewer.py  router.py  visual_refiner.py
teachgen/planner/: __init__.py  content_writer.py  route.py
teachgen/providers/: __init__.py  base.py  gemini_provider.py  openai_provider.py  openrouter_http.py  openrouter_provider.py
teachgen/renderers/: __init__.py  animation.py  base.py  concept_image.py  slide.py
