[project]
name = "teaching-video-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "manim>=0.20.1",
    "moviepy>=1.0.3",
    "pillow>=10.0",
    "psutil>=7.2.2",
    "pydantic>=2.5",
    "python-pptx>=0.6.23",
    "requests>=2.34.2",
]
